<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="hello">Hello World, EngineerMode!</string>
	<string name="app_name">WifiTxTest</string>
	<string name="Settings">Settings</string>
	<string name="BatteryLog">BatteryLog</string>
	<string name="Log_Record_Interval">Interval Of Info Record [1-100]:</string>
	<string name="battery_info_Log">Battery Info Record:</string>
	<string name="battery_info_Log_Start">Start</string>
	<string name="battery_info_Log_End">Stop</string>
	<string name="battery_info_10">10</string>
	<string name="battery_info_s">s</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="GPRS">GPRS</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="IMEI">Write IMEI</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_FD">Fast Dormancy</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_FD_SCREEN_ON">Set FD timer for screen on</string>
    <string name="GPRS_FD_SCREEN_OFF">Set FD timer for screen off</string>
    <string name="TouchScreen">TouchScreen</string>
    <string name="TouchScreen_HandWriting">TouchScreen_HandWriting</string>
    <string name="TouchScreen_Verification">TouchScreen_Verification</string>
    <string name="TouchScreen_VerificationPoint">TouchScreen_VerificationPoint</string>
    <string name="TouchScreen_VerificationLine">TouchScreen_VerificationLine</string>
    <string name="TouchScreen_VerificationShaking">TouchScreen_VerificationShaking</string>
    <string name="TouchScreen_MultiTouch">TouchScreen_MultiTouch</string>
    <string name="TouchScreen_Settings_TextValue">The value</string>
    <string name="TouchScreen_Settings_TextSpinner">Category</string>
    <string name="TouchScreen_Settings_TextSet">Set</string>
    <string name="TouchScreen_Settings">Settings</string>
    <string name="TouchScreen_Settings_Value">0</string>
    <string name="TouchScreen_Settings_sdcard">OFF</string>
    <string name="TouchScreen_Settings_uart">OFF</string>
    <string name="TouchScreen_Settings_TextUart">Enable Uart Log</string>
    <string name="TouchScreen_Settings_TextSDcard">Enable SD card Log</string>
    <string name="Display">Display</string>
    <string name="Display_lcd_Text">Back Light</string>
    <string name="Display_lcd_on">LCD ON</string>
    <string name="Display_lcd_off">LCD OFF</string>
    <string name="Display_lcm_Text">LCM Controller</string>
    <string name="Display_lcm_on">LCM ON</string>
    <string name="Display_lcm_off">LCM OFF</string>
    <string name="Display_set_Text">PWM duty: 0~63</string>
    <string name="Display_set">Set</string>
    <string name="Display_Edit_Value">0</string>
    <string name="Memory">Memory</string>
    <string name="NAND_Flash">NAND_Flash</string>
    <string name="EMI_Register">EMI_Register</string>
    <string name="comm_info">Common Info</string>
    <string name="file_sys_info">File System Info</string>
    <string name="partition_info">Partition Info</string>
    <string name="Power">Power</string>
    <string name="PMU">PMU</string>
    <string name="ChargeBattery">ChargeBattery</string>
    <string name="pmu_btn_get">Get</string>
    <string name="pmu_btn_set">Set</string>
    <string name="address_text">Address[Hex input:Fz0xxxxx]->[z00xxxxx]</string>
    <string name="warning_text">WARNING: Wrong set may cause system error!</string>
    <string name="value_text">Value</string>
    <string name="pmu_info_text">PMU Info</string>
    <string name="pmu_reg">PMU Register</string>
    <string name="battery_charge_info_text">N</string>
    <string name="IO">IO</string>
    <string name="EINT">EINT</string>
    <string name="GPIO">GPIO</string>
    <string name="MSDC">MSDC</string>
    <string name="MSDC_Get">Get</string>
    <string name="MSDC_Set">Set</string>
    <string name="MSDC_Current_cmd_spininer">Data current</string>
    <string name="MSDC_Current_data_spininer">Command current</string>
    <string name="EINT_edit_Text">EINT NO: #</string>
    <string name="EINT_edit">0</string>
    <string name="EINT_query">Query</string>
    <string name="EINT_sensitivity_Text">Sensitivity[level/edge]: </string>
    <string name="EINT_polarity_Text">Polarity[high/low]: </string>
    <string name="GPIO_Setno_Text">GPIO No#</string>
    <string name="GPIO_Setnomax_Text">MaxNumber:</string>
    <string name="GPIO_Direction_Text">Set Direction</string>
    <string name="GPIO_Direction_In">Input</string>
    <string name="GPIO_Direction_Out">Output</string>
    <string name="GPIO_Data_Text">Set Data Level</string>
    <string name="GPIO_Data_High">High</string>
    <string name="GPIO_Data_Low">Low</string>
    <string name="GPIO_Edit_Value">0</string>
    <string name="Baseband">Baseband</string>
    <string name="Baseband_addr_text">Address(Hex)</string>
    <string name="Baseband_val_text">Value(Hex)</string>
    <string name="Baseband_Addr">FF</string>
    <string name="Baseband_Val">0</string>
    <string name="Baseband_len_text">Block Size(Dec)</string>
    <string name="Baseband_Len">1</string>
    <string name="Baseband_Read">Read</string>
    <string name="Baseband_Write">Write</string>
    <string name="Baseband_Info">Memory:</string>
		<string name="enable_sleep_mode">Enable SleepMode</string>
		<string name="disable_sleep_mode">Disable SleepMode</string>
		<string name="enable_dcm">Enable DCM</string>
        <string name="disable_dcm">Disable DCM</string>
        <string name="modem_activity">ModemActivity</string>
        <string name="sleep_mode">Sleep Mode</string>
    <string name="dcm">DCM</string>
        <string name="memory_dump">Memory Dump</string>
        <string name="on">ON</string>
        <string name="off">OFF</string>
    <string name="Cpufreq">CPU Freq Test</string>
    <string name="CpuFreq_BtnStartTest">START</string>
    <string name="CpuFreq_BtnStopTest">STOP</string>
    <string name="CpuFreq_BtnCurrentTest">START[Never Returned]</string>
    <string name="CpuFreq_Info">Info:</string>
    <string name="CpuFreq_BtnStartTest_Text">CPU Freq Test</string>
    <string name="CpuFreq_BtnStopTest_Text">CPU Freq Test</string>
    <string name="CpuFreq_BtnCurrentTest_Text">Currenct Test</string>
    <string name="SysLogger">System Logger</string>
     <string name="syslogger_md">Modem</string>
    <string name="syslogger_mobile">Mobile</string>
    <string name="syslogger_net">Network</string>
    <string name="Error_info">Please check whether package was lost.</string>
    <string name="Audio">Audio</string>
    <string name="Audio_ModeSetting">Audio_ModeSetting</string>
    <string name="Audio_ModeSetting_TextView">Value is 0~255</string>
    <string name="Audio_ModeSetting_EditText">0</string>
    <string name="Audio_ModeSetting_Button">Set</string>
    <string name="Audio_SpeechEnhancement">Audio_SpeechEnhancement</string>
    <string name="Audio_SpEnhancement_TextView">Value is 0~100</string>
    <string name="Audio_SpEnhancement_EditText">0</string>
    <string name="Audio_SpEnhancement_Button">Set</string>
    <string name="Audio_DebugInfo">Audio_DebugInfo</string>
    <string name="Audio_DebugInfo_ParameterText">Please choose the parameter:</string>
    <string name="Audio_DebugInfo_ValueText">Please input the value:</string>
    <string name="Audio_DebugInfo_EditText">0</string>
    <string name="Audio_DebugInfo_Button">Set</string>
    <string name="Audio_SpeechLogger">Audio_SpeechLogger</string>
    <string name="Audio_SpeechLogger_EnableText">Enable speech logger:</string>
    <string name="Audio_SpeechLogger_Enable">Enable speech log</string>
    <string name="Audio_SpeechLogger_FileText">File location:/sdcard/VM_log</string>
    <string name="Audio_SpeechLogger_LocationText">File location:/sdcard/speechlog</string>
    <string name="Audio_SpeechLogger_Play">Play log</string>
    <string name="Audio_LogPlayer">Audio_LogPlayer</string>
    <string name="Audio_Level_Text">Level</string>
    <string name="Audio_VOIPLogger_Enable">Enable VOIP switch</string>
    <string name="Audio_VOIPLogger_EnableText">Enable VOIP logger:</string>
        <string name="Audio_MaxVol_Text">Max Vol. 0~160 </string>
    <string name="Audio_MaxVol_Set">Set</string>
    <string name="Audio_VOIPLogger_Info">File Location: /sdcard/VOIP_DebugInfo</string>
    <string name="Audio_CTM4WAYLogger_EnableText">Enable CTM4WAY Logger</string>
    <string name="Audio_CTM4WAYLogger_Enable">Enable</string>
   <string name="Audio_KTone">K Tone</string>
    <string name="Audio_KTone_StopBtn">Stop</string>
    <string name="Audio_KTone_StartBtn">Start</string>
    <string name="Audio_KTone_Freq">Frequency</string>
    <string name="Audio_Fir_Title">Current FIR Type</string>
    <string name="Audio_ModeSetting_Title">Type</string>
    <string name="Camera">Camera</string>
    <string name="Camera_Preview">Camera_Preview</string>
    <string name="capture">Capture</string>
    <string name="WiFi">WiFi</string>
    <string name="WiFi_Tx">WiFi_Tx</string>
    <string name="WiFi_Rx">WiFi_Rx</string>
    <string name="WiFi_EEPROM">WiFi_NVRAM</string>
    <string name="WiFi_Temperature_Sensor">WiFi_Temperature_Sensor</string>
    <string name="WiFi_MCR">WiFi_MCR</string>
    <string name="WiFi_Channel_Text">Channel:</string>
    <string name="WiFi_Signal">Signal Mode:</string>
    <string name="WiFi_Mode">Wifi Mode:</string>
    <string name="WiFi_Bandwidth">Bandwidth:</string>
    <string name="WiFi_Pkt_Text">Pkt length:</string>
    <string name="WiFi_Rate_Text">Rate:</string>
    <string name="WiFi_Power_Text">Power:</string>
    <string name="WiFi_Power_Mode_Text">Power Mode:</string>
    <string name="WiFi_Go">Go</string>
    <string name="WiFi_Stop">Stop</string>
</resources>